<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:elegantTextHeight="false"
        android:text="@string/boton_checador"
        android:textAlignment="center"
        android:textSize="34sp"
        android:onClick="cambio_checador"/>


    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:elegantTextHeight="false"
        android:onClick="cambio_productos"
        android:text="@string/boton_productos"
        android:textSize="34sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/boton_tickets"
        android:textSize="34sp"
        android:onClick="cambio_tickets"/>

</LinearLayout>